fix: dark mode

--- a/apps/explorer/src/App.css
+++ b/apps/explorer/src/App.css
@@ -71,3 +71,17 @@ html, body, #root {
   border-right: 4px solid transparent;
   border-bottom: 4px solid var(--color-neutral-90);
 }
+
+@media (prefers-color-scheme: dark) {
+  body:not(.graphiql-light) .graphiql-container,
+  body:not(.graphiql-light) .CodeMirror-info,
+  body:not(.graphiql-light) .CodeMirror-lint-tooltip,
+  body:not(.graphiql-light) .graphiql-dialog,
+  body:not(.graphiql-light) .graphiql-dialog-overlay,
+  body:not(.graphiql-light) .graphiql-tooltip,
+  body:not(.graphiql-light) [data-radix-popper-content-wrapper] {
+    --color-base: 219, 29%, 7% !important;
+  }
+}
+
+
